commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.tablechangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.tablechangedeventargs.yml
@@ -1,188 +1,223 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 53da1fab6e6bcad84b8b6ea2deda89d6023649ae
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303065"
 items:
-- uid: excel.Excel.TableChangedEventArgs
-  summary: >-
-    提供有关引发 Changed 事件的表的信息。
+  - uid: excel.Excel.TableChangedEventArgs
+    summary: |-
+      提供有关引发 Changed 事件的表的信息。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.TableChangedEventArgs
+    fullName: Excel.TableChangedEventArgs
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.TableChangedEventArgs.getRange
+      - excel.Excel.TableChangedEventArgs.getRangeOrNullObject
+      - excel.Excel.TableChangedEventArgs.address
+      - excel.Excel.TableChangedEventArgs.changeType
+      - excel.Excel.TableChangedEventArgs.details
+      - excel.Excel.TableChangedEventArgs.source
+      - excel.Excel.TableChangedEventArgs.tableId
+      - excel.Excel.TableChangedEventArgs.type
+      - excel.Excel.TableChangedEventArgs.worksheetId
+  - uid: excel.Excel.TableChangedEventArgs.getRange
+    summary: |-
+      获取表示特定工作表上的表的更改区域的范围。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.TableChangedEventArgs
-  fullName: Excel.TableChangedEventArgs
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.TableChangedEventArgs.getRange
-  - excel.Excel.TableChangedEventArgs.getRangeOrNullObject
-  - excel.Excel.TableChangedEventArgs.address
-  - excel.Excel.TableChangedEventArgs.changeType
-  - excel.Excel.TableChangedEventArgs.details
-  - excel.Excel.TableChangedEventArgs.source
-  - excel.Excel.TableChangedEventArgs.tableId
-  - excel.Excel.TableChangedEventArgs.type
-  - excel.Excel.TableChangedEventArgs.worksheetId
-- uid: excel.Excel.TableChangedEventArgs.getRange
-  summary: >-
-    获取表示特定工作表上的表的更改区域的范围。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: getRange(ctx)
+    fullName: getRange(ctx)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getRange(ctx: Excel.RequestContext): Excel.Range;'
+      return:
+        type:
+          - excel.Excel.Range
+        description: ''
+      parameters:
+        - id: ctx
+          description: ''
+          type:
+            - excel.Excel.RequestContext
+  - uid: excel.Excel.TableChangedEventArgs.getRangeOrNullObject
+    summary: |-
+      获取表示特定工作表上的表的更改区域的范围。 它可能会返回 null 对象。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: getRangeOrNullObject(ctx)
+    fullName: getRangeOrNullObject(ctx)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getRangeOrNullObject(ctx: Excel.RequestContext): Excel.Range;'
+      return:
+        type:
+          - excel.Excel.Range
+        description: ''
+      parameters:
+        - id: ctx
+          description: ''
+          type:
+            - excel.Excel.RequestContext
+  - uid: excel.Excel.TableChangedEventArgs.address
+    summary: |-
+      获取地址，该地址表示特定工作表上的表格的更改区域。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: getRange(ctx)
-  fullName: getRange(ctx)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getRange(ctx: Excel.RequestContext): Excel.Range;'
-    return:
-      type:
-      - excel.Excel.Range
-      description: ''
-    parameters:
-    - id: ctx
-      description: ''
-      type:
-      - excel.Excel.RequestContext
-- uid: excel.Excel.TableChangedEventArgs.getRangeOrNullObject
-  summary: >-
-    获取表示特定工作表上的表的更改区域的范围。 它可能返回 null 对象。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: address
+    fullName: address
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'address: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.TableChangedEventArgs.changeType
+    summary: |-
+      获取更改类型，该类型表示 Changed 事件的触发方式。 有关详细信息, 请参阅 DataChangeType。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: changeType
+    fullName: changeType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'changeType: Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted";'
+      return:
+        type:
+          - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
+  - uid: excel.Excel.TableChangedEventArgs.details
+    summary: |-
+      表示更改详情的信息
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: getRangeOrNullObject(ctx)
-  fullName: getRangeOrNullObject(ctx)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getRangeOrNullObject(ctx: Excel.RequestContext): Excel.Range;'
-    return:
-      type:
-      - excel.Excel.Range
-      description: ''
-    parameters:
-    - id: ctx
-      description: ''
-      type:
-      - excel.Excel.RequestContext
-- uid: excel.Excel.TableChangedEventArgs.address
-  summary: >-
-    获取地址，该地址表示特定工作表上的表格的更改区域。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: details
+    fullName: details
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'details: Excel.ChangedEventDetail;'
+      return:
+        type:
+          - excel.Excel.ChangedEventDetail
+        description: |-
 
+          #### <a name="examples"></a>示例
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: address
-  fullName: address
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'address: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.TableChangedEventArgs.changeType
-  summary: >-
-    获取更改类型，该类型表示 Changed 事件的触发方式。 有关详细信息, 请参阅 DataChangeType。
+          ```typescript
+          async function onTableChanged(eventArgs: Excel.TableChangedEventArgs) {
+              await Excel.run(async (context) => {
+                  const details = eventArgs.details;
+                  const address = eventArgs.address;
 
+                  console.log(`Change at ${address}: was ${details.valueBefore}(${details.valueTypeBefore}),`
+                    + ` now is ${details.valueAfter}(${details.valueTypeAfter})`);
+              });
+          }
+          ```
+  - uid: excel.Excel.TableChangedEventArgs.source
+    summary: |-
+      获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: changeType
-  fullName: changeType
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'changeType: Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted";'
-    return:
-      type:
-      - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
-- uid: excel.Excel.TableChangedEventArgs.details
-  summary: >-
-    代表有关更改详细信息的信息
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: source
+    fullName: source
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'source: Excel.EventSource | "Local" | "Remote";'
+      return:
+        type:
+          - Excel.EventSource | "Local" | "Remote"
+  - uid: excel.Excel.TableChangedEventArgs.tableId
+    summary: |-
+      获取其中的数据发生更改的表格的 ID。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: tableId
+    fullName: tableId
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'tableId: string;'
+      return:
+        type:
+          - string
+        description: |-
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: details
-  fullName: details
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'details: Excel.ChangedEventDetail;'
-    return:
-      type:
-      - excel.Excel.ChangedEventDetail
-- uid: excel.Excel.TableChangedEventArgs.source
-  summary: >-
-    获取事件源。 有关详细信息, 请参阅 "Excel. EventSource"。
+          #### <a name="examples"></a>示例
 
+          ```typescript
+          async function onChange(event) {
+              await Excel.run(async (context) => {
+                  let table = context.workbook.tables.getItem(event.tableId);
+                  let worksheet = context.workbook.worksheets.getItem(event.worksheetId);
+                  worksheet.load("name");
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: source
-  fullName: source
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'source: Excel.EventSource | "Local" | "Remote";'
-    return:
-      type:
-      - Excel.EventSource | "Local" | "Remote"
-- uid: excel.Excel.TableChangedEventArgs.tableId
-  summary: >-
-    获取其中的数据发生更改的表格的 ID。
+                  await context.sync();
 
+                  console.log("Handler for table collection onChanged event has been triggered. Data changed address: " + event.address);
+                  console.log("Table Id : " + event.tableId);
+                  console.log("Worksheet Id : " + worksheet.name);
+              });
+          }
+          ```
+  - uid: excel.Excel.TableChangedEventArgs.type
+    summary: |-
+      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: tableId
-  fullName: tableId
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'tableId: string;'
-    return:
-      type:
-      - string
-      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered. Data changed address: \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
-- uid: excel.Excel.TableChangedEventArgs.type
-  summary: >-
-    获取事件的类型。 有关详细信息, 请参阅 "Excel. 事件"。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type: "TableChanged";'
+      return:
+        type:
+          - '"TableChanged"'
+  - uid: excel.Excel.TableChangedEventArgs.worksheetId
+    summary: |-
+      获取其中的数据发生更改的工作表的 ID。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: worksheetId
+    fullName: worksheetId
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'worksheetId: string;'
+      return:
+        type:
+          - string
+        description: |-
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type: "TableChanged";'
-    return:
-      type:
-      - "\"TableChanged\""
-- uid: excel.Excel.TableChangedEventArgs.worksheetId
-  summary: >-
-    获取其中的数据发生更改的工作表的 ID。
+          #### <a name="examples"></a>示例
 
+          ```typescript
+          async function onChange(event) {
+              await Excel.run(async (context) => {
+                  let table = context.workbook.tables.getItem(event.tableId);
+                  let worksheet = context.workbook.worksheets.getItem(event.worksheetId);
+                  worksheet.load("name");
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: worksheetId
-  fullName: worksheetId
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'worksheetId: string;'
-    return:
-      type:
-      - string
-      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nasync function onChange(event) {\n    await Excel.run(async (context) => {\n        let table = context.workbook.tables.getItem(event.tableId);\n        let worksheet = context.workbook.worksheets.getItem(event.worksheetId);\n        worksheet.load(\"name\");\n\n        await context.sync();\n\n        console.log(\"Handler for table collection onChanged event has been triggered. Data changed address: \" + event.address);\n        console.log(\"Table Id : \" + event.tableId);\n        console.log(\"Worksheet Id : \" + worksheet.name);\n    });\n}\n```"
+                  await context.sync();
+
+                  console.log("Handler for table collection onChanged event has been triggered. Data changed address: " + event.address);
+                  console.log("Table Id : " + event.tableId);
+                  console.log("Worksheet Id : " + worksheet.name);
+              });
+          }
+          ```
