--- a/docs/docs-ref-autogen/excel/excel.worksheetchangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetchangedeventargs.yml
@@ -1,169 +1,172 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 096d9015ced3e018d41e4beebfcd4f4747bae882
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303107"
 items:
-- uid: excel.Excel.WorksheetChangedEventArgs
-  summary: >-
-    提供有关引发 Changed 事件的工作表的信息。
+  - uid: excel.Excel.WorksheetChangedEventArgs
+    summary: |-
+      提供有关引发 Changed 事件的工作表的信息。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.WorksheetChangedEventArgs
+    fullName: Excel.WorksheetChangedEventArgs
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.WorksheetChangedEventArgs.getRange
+      - excel.Excel.WorksheetChangedEventArgs.getRangeOrNullObject
+      - excel.Excel.WorksheetChangedEventArgs.address
+      - excel.Excel.WorksheetChangedEventArgs.changeType
+      - excel.Excel.WorksheetChangedEventArgs.details
+      - excel.Excel.WorksheetChangedEventArgs.source
+      - excel.Excel.WorksheetChangedEventArgs.type
+      - excel.Excel.WorksheetChangedEventArgs.worksheetId
+  - uid: excel.Excel.WorksheetChangedEventArgs.getRange
+    summary: |-
+      获取区域，该区域表示特定工作表上的更改区域。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.WorksheetChangedEventArgs
-  fullName: Excel.WorksheetChangedEventArgs
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.WorksheetChangedEventArgs.getRange
-  - excel.Excel.WorksheetChangedEventArgs.getRangeOrNullObject
-  - excel.Excel.WorksheetChangedEventArgs.address
-  - excel.Excel.WorksheetChangedEventArgs.changeType
-  - excel.Excel.WorksheetChangedEventArgs.details
-  - excel.Excel.WorksheetChangedEventArgs.source
-  - excel.Excel.WorksheetChangedEventArgs.type
-  - excel.Excel.WorksheetChangedEventArgs.worksheetId
-- uid: excel.Excel.WorksheetChangedEventArgs.getRange
-  summary: >-
-    获取表示特定工作表的更改区域的区域。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: getRange(ctx)
+    fullName: getRange(ctx)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getRange(ctx: Excel.RequestContext): Excel.Range;'
+      return:
+        type:
+          - excel.Excel.Range
+        description: ''
+      parameters:
+        - id: ctx
+          description: ''
+          type:
+            - excel.Excel.RequestContext
+  - uid: excel.Excel.WorksheetChangedEventArgs.getRangeOrNullObject
+    summary: |-
+      获取区域，该区域表示特定工作表上的更改区域。 它可能会返回 null 对象。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: getRangeOrNullObject(ctx)
+    fullName: getRangeOrNullObject(ctx)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getRangeOrNullObject(ctx: Excel.RequestContext): Excel.Range;'
+      return:
+        type:
+          - excel.Excel.Range
+        description: ''
+      parameters:
+        - id: ctx
+          description: ''
+          type:
+            - excel.Excel.RequestContext
+  - uid: excel.Excel.WorksheetChangedEventArgs.address
+    summary: |-
+      获取区域地址，该地址表示特定工作表上的更改区域。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: getRange(ctx)
-  fullName: getRange(ctx)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getRange(ctx: Excel.RequestContext): Excel.Range;'
-    return:
-      type:
-      - excel.Excel.Range
-      description: ''
-    parameters:
-    - id: ctx
-      description: ''
-      type:
-      - excel.Excel.RequestContext
-- uid: excel.Excel.WorksheetChangedEventArgs.getRangeOrNullObject
-  summary: >-
-    获取表示特定工作表的更改区域的区域。 它可能返回 null 对象。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: address
+    fullName: address
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'address: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.WorksheetChangedEventArgs.changeType
+    summary: |-
+      获取更改类型，该类型表示 Changed 事件的触发方式。 有关详细信息, 请参阅 DataChangeType。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: changeType
+    fullName: changeType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'changeType: Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted";'
+      return:
+        type:
+          - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
+  - uid: excel.Excel.WorksheetChangedEventArgs.details
+    summary: |-
+      表示更改详情的信息
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: getRangeOrNullObject(ctx)
-  fullName: getRangeOrNullObject(ctx)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getRangeOrNullObject(ctx: Excel.RequestContext): Excel.Range;'
-    return:
-      type:
-      - excel.Excel.Range
-      description: ''
-    parameters:
-    - id: ctx
-      description: ''
-      type:
-      - excel.Excel.RequestContext
-- uid: excel.Excel.WorksheetChangedEventArgs.address
-  summary: >-
-    获取区域地址，该地址表示特定工作表上的更改区域。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: details
+    fullName: details
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'details: Excel.ChangedEventDetail;'
+      return:
+        type:
+          - excel.Excel.ChangedEventDetail
+        description: |-
 
+          #### <a name="examples"></a>示例
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: address
-  fullName: address
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'address: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.WorksheetChangedEventArgs.changeType
-  summary: >-
-    获取更改类型，该类型表示 Changed 事件的触发方式。 有关详细信息, 请参阅 DataChangeType。
+          ```javascript
+          // This function would be used as an event handler for the Worksheet.onChanged event.
+          function onWorksheetChanged(eventArgs) {
+              Excel.run(function (context) {
+                  var details = eventArgs.details;
+                  var address = eventArgs.address;
 
+                  // Print the before and after types and values to the console.
+                  console.log(`Change at ${address}: was ${details.valueBefore}(${details.valueTypeBefore}),`
+                      + ` now is ${details.valueAfter}(${details.valueTypeAfter})`);
+                  return context.sync();
+              });
+          }
+          ```
+  - uid: excel.Excel.WorksheetChangedEventArgs.source
+    summary: |-
+      获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: changeType
-  fullName: changeType
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'changeType: Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted";'
-    return:
-      type:
-      - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
-- uid: excel.Excel.WorksheetChangedEventArgs.details
-  summary: >-
-    代表有关更改详细信息的信息
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: source
+    fullName: source
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'source: Excel.EventSource | "Local" | "Remote";'
+      return:
+        type:
+          - Excel.EventSource | "Local" | "Remote"
+  - uid: excel.Excel.WorksheetChangedEventArgs.type
+    summary: |-
+      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type: "WorksheetChanged";'
+      return:
+        type:
+          - '"WorksheetChanged"'
+  - uid: excel.Excel.WorksheetChangedEventArgs.worksheetId
+    summary: |-
+      获取其中的数据发生更改的工作表的 ID。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: details
-  fullName: details
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'details: Excel.ChangedEventDetail;'
-    return:
-      type:
-      - excel.Excel.ChangedEventDetail
-- uid: excel.Excel.WorksheetChangedEventArgs.source
-  summary: >-
-    获取事件源。 有关详细信息, 请参阅 "Excel. EventSource"。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: source
-  fullName: source
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'source: Excel.EventSource | "Local" | "Remote";'
-    return:
-      type:
-      - Excel.EventSource | "Local" | "Remote"
-- uid: excel.Excel.WorksheetChangedEventArgs.type
-  summary: >-
-    获取事件的类型。 有关详细信息, 请参阅 "Excel. 事件"。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type: "WorksheetChanged";'
-    return:
-      type:
-      - "\"WorksheetChanged\""
-- uid: excel.Excel.WorksheetChangedEventArgs.worksheetId
-  summary: >-
-    获取其中的数据发生更改的工作表的 ID。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: worksheetId
-  fullName: worksheetId
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'worksheetId: string;'
-    return:
-      type:
-      - string
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: worksheetId
+    fullName: worksheetId
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'worksheetId: string;'
+      return:
+        type:
+          - string
