--- a/docs/docs-ref-autogen/excel/excel.worksheetchangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetchangedeventargs.yml
@@ -1,169 +1,172 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 096d9015ced3e018d41e4beebfcd4f4747bae882
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303107"
 items:
-- uid: excel.Excel.WorksheetChangedEventArgs
-  summary: >-
-    <span data-ttu-id="fa5bb-101">提供有关引发 Changed 事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-101">Provides information about the worksheet that raised the Changed event.</span></span>
+  - uid: excel.Excel.WorksheetChangedEventArgs
+    summary: |-
+      <span data-ttu-id="d2700-101">提供有关引发 Changed 事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="d2700-101">Provides information about the worksheet that raised the Changed event.</span></span>
 
+      <span data-ttu-id="d2700-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2700-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.WorksheetChangedEventArgs
+    fullName: Excel.WorksheetChangedEventArgs
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.WorksheetChangedEventArgs.getRange
+      - excel.Excel.WorksheetChangedEventArgs.getRangeOrNullObject
+      - excel.Excel.WorksheetChangedEventArgs.address
+      - excel.Excel.WorksheetChangedEventArgs.changeType
+      - excel.Excel.WorksheetChangedEventArgs.details
+      - excel.Excel.WorksheetChangedEventArgs.source
+      - excel.Excel.WorksheetChangedEventArgs.type
+      - excel.Excel.WorksheetChangedEventArgs.worksheetId
+  - uid: excel.Excel.WorksheetChangedEventArgs.getRange
+    summary: |-
+      <span data-ttu-id="d2700-103">获取区域，该区域表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="d2700-103">Gets the range that represents the changed area of a specific worksheet.</span></span>
 
-    <span data-ttu-id="fa5bb-102">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.WorksheetChangedEventArgs
-  fullName: Excel.WorksheetChangedEventArgs
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.WorksheetChangedEventArgs.getRange
-  - excel.Excel.WorksheetChangedEventArgs.getRangeOrNullObject
-  - excel.Excel.WorksheetChangedEventArgs.address
-  - excel.Excel.WorksheetChangedEventArgs.changeType
-  - excel.Excel.WorksheetChangedEventArgs.details
-  - excel.Excel.WorksheetChangedEventArgs.source
-  - excel.Excel.WorksheetChangedEventArgs.type
-  - excel.Excel.WorksheetChangedEventArgs.worksheetId
-- uid: excel.Excel.WorksheetChangedEventArgs.getRange
-  summary: >-
-    <span data-ttu-id="fa5bb-103">获取表示特定工作表的更改区域的区域。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-103">Gets the range that represents the changed area of a specific worksheet.</span></span>
+      <span data-ttu-id="d2700-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2700-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: getRange(ctx)
+    fullName: getRange(ctx)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getRange(ctx: Excel.RequestContext): Excel.Range;'
+      return:
+        type:
+          - excel.Excel.Range
+        description: ''
+      parameters:
+        - id: ctx
+          description: ''
+          type:
+            - excel.Excel.RequestContext
+  - uid: excel.Excel.WorksheetChangedEventArgs.getRangeOrNullObject
+    summary: |-
+      <span data-ttu-id="d2700-105">获取区域，该区域表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="d2700-105">Gets the range that represents the changed area of a specific worksheet.</span></span> <span data-ttu-id="d2700-106">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="d2700-106">It might return null object.</span></span>
 
+      <span data-ttu-id="d2700-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2700-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: getRangeOrNullObject(ctx)
+    fullName: getRangeOrNullObject(ctx)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getRangeOrNullObject(ctx: Excel.RequestContext): Excel.Range;'
+      return:
+        type:
+          - excel.Excel.Range
+        description: ''
+      parameters:
+        - id: ctx
+          description: ''
+          type:
+            - excel.Excel.RequestContext
+  - uid: excel.Excel.WorksheetChangedEventArgs.address
+    summary: |-
+      <span data-ttu-id="d2700-108">获取区域地址，该地址表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="d2700-108">Gets the range address that represents the changed area of a specific worksheet.</span></span>
 
-    <span data-ttu-id="fa5bb-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: getRange(ctx)
-  fullName: getRange(ctx)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getRange(ctx: Excel.RequestContext): Excel.Range;'
-    return:
-      type:
-      - excel.Excel.Range
-      description: ''
-    parameters:
-    - id: ctx
-      description: ''
-      type:
-      - excel.Excel.RequestContext
-- uid: excel.Excel.WorksheetChangedEventArgs.getRangeOrNullObject
-  summary: >-
-    <span data-ttu-id="fa5bb-105">获取表示特定工作表的更改区域的区域。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-105">Gets the range that represents the changed area of a specific worksheet.</span></span> <span data-ttu-id="fa5bb-106">它可能返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-106">It might return null object.</span></span>
+      <span data-ttu-id="d2700-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2700-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: address
+    fullName: address
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'address: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.WorksheetChangedEventArgs.changeType
+    summary: |-
+      <span data-ttu-id="d2700-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="d2700-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="d2700-111">有关详细信息, 请参阅 DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="d2700-111">See Excel.DataChangeType for details.</span></span>
 
+      <span data-ttu-id="d2700-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2700-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: changeType
+    fullName: changeType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'changeType: Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted";'
+      return:
+        type:
+          - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
+  - uid: excel.Excel.WorksheetChangedEventArgs.details
+    summary: |-
+      <span data-ttu-id="d2700-113">表示更改详情的信息</span><span class="sxs-lookup"><span data-stu-id="d2700-113">Represents the information about the change detail</span></span>
 
-    <span data-ttu-id="fa5bb-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: getRangeOrNullObject(ctx)
-  fullName: getRangeOrNullObject(ctx)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getRangeOrNullObject(ctx: Excel.RequestContext): Excel.Range;'
-    return:
-      type:
-      - excel.Excel.Range
-      description: ''
-    parameters:
-    - id: ctx
-      description: ''
-      type:
-      - excel.Excel.RequestContext
-- uid: excel.Excel.WorksheetChangedEventArgs.address
-  summary: >-
-    <span data-ttu-id="fa5bb-108">获取区域地址，该地址表示特定工作表上的更改区域。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-108">Gets the range address that represents the changed area of a specific worksheet.</span></span>
+      <span data-ttu-id="d2700-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2700-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: details
+    fullName: details
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'details: Excel.ChangedEventDetail;'
+      return:
+        type:
+          - excel.Excel.ChangedEventDetail
+        description: |-
 
+          #### <a name="examples"></a><span data-ttu-id="d2700-115">示例</span><span class="sxs-lookup"><span data-stu-id="d2700-115">Examples</span></span>
 
-    <span data-ttu-id="fa5bb-109">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: address
-  fullName: address
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'address: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.WorksheetChangedEventArgs.changeType
-  summary: >-
-    <span data-ttu-id="fa5bb-110">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-110">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="fa5bb-111">有关详细信息, 请参阅 DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-111">See Excel.DataChangeType for details.</span></span>
+          ```javascript
+          // This function would be used as an event handler for the Worksheet.onChanged event.
+          function onWorksheetChanged(eventArgs) {
+              Excel.run(function (context) {
+                  var details = eventArgs.details;
+                  var address = eventArgs.address;
 
+                  // Print the before and after types and values to the console.
+                  console.log(`Change at ${address}: was ${details.valueBefore}(${details.valueTypeBefore}),`
+                      + ` now is ${details.valueAfter}(${details.valueTypeAfter})`);
+                  return context.sync();
+              });
+          }
+          ```
+  - uid: excel.Excel.WorksheetChangedEventArgs.source
+    summary: |-
+      <span data-ttu-id="d2700-116">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="d2700-116">Gets the source of the event.</span></span> <span data-ttu-id="d2700-117">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="d2700-117">See Excel.EventSource for details.</span></span>
 
-    <span data-ttu-id="fa5bb-112">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: changeType
-  fullName: changeType
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'changeType: Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted";'
-    return:
-      type:
-      - Excel.DataChangeType | "Unknown" | "RangeEdited" | "RowInserted" | "RowDeleted" | "ColumnInserted" | "ColumnDeleted" | "CellInserted" | "CellDeleted"
-- uid: excel.Excel.WorksheetChangedEventArgs.details
-  summary: >-
-    <span data-ttu-id="fa5bb-113">代表有关更改详细信息的信息</span><span class="sxs-lookup"><span data-stu-id="fa5bb-113">Represents the information about the change detail</span></span>
+      <span data-ttu-id="d2700-118">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2700-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: source
+    fullName: source
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'source: Excel.EventSource | "Local" | "Remote";'
+      return:
+        type:
+          - Excel.EventSource | "Local" | "Remote"
+  - uid: excel.Excel.WorksheetChangedEventArgs.type
+    summary: |-
+      <span data-ttu-id="d2700-119">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="d2700-119">Gets the type of the event.</span></span> <span data-ttu-id="d2700-120">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="d2700-120">See Excel.EventType for details.</span></span>
 
+      <span data-ttu-id="d2700-121">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2700-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type: "WorksheetChanged";'
+      return:
+        type:
+          - '"WorksheetChanged"'
+  - uid: excel.Excel.WorksheetChangedEventArgs.worksheetId
+    summary: |-
+      <span data-ttu-id="d2700-122">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="d2700-122">Gets the id of the worksheet in which the data changed.</span></span>
 
-    <span data-ttu-id="fa5bb-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: details
-  fullName: details
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'details: Excel.ChangedEventDetail;'
-    return:
-      type:
-      - excel.Excel.ChangedEventDetail
-- uid: excel.Excel.WorksheetChangedEventArgs.source
-  summary: >-
-    <span data-ttu-id="fa5bb-115">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-115">Gets the source of the event.</span></span> <span data-ttu-id="fa5bb-116">有关详细信息, 请参阅 "Excel. EventSource"。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-116">See Excel.EventSource for details.</span></span>
-
-
-    <span data-ttu-id="fa5bb-117">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: source
-  fullName: source
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'source: Excel.EventSource | "Local" | "Remote";'
-    return:
-      type:
-      - Excel.EventSource | "Local" | "Remote"
-- uid: excel.Excel.WorksheetChangedEventArgs.type
-  summary: >-
-    <span data-ttu-id="fa5bb-118">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-118">Gets the type of the event.</span></span> <span data-ttu-id="fa5bb-119">有关详细信息, 请参阅 "Excel. 事件"。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-119">See Excel.EventType for details.</span></span>
-
-
-    <span data-ttu-id="fa5bb-120">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type: "WorksheetChanged";'
-    return:
-      type:
-      - "\"WorksheetChanged\""
-- uid: excel.Excel.WorksheetChangedEventArgs.worksheetId
-  summary: >-
-    <span data-ttu-id="fa5bb-121">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="fa5bb-121">Gets the id of the worksheet in which the data changed.</span></span>
-
-
-    <span data-ttu-id="fa5bb-122">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa5bb-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: worksheetId
-  fullName: worksheetId
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'worksheetId: string;'
-    return:
-      type:
-      - string
+      <span data-ttu-id="d2700-123">\[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2700-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: worksheetId
+    fullName: worksheetId
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'worksheetId: string;'
+      return:
+        type:
+          - string
