commit translated contents

--- a/docs/docs-ref-autogen/toc.yml
+++ b/docs/docs-ref-autogen/toc.yml
@@ -363,7 +363,7 @@ items:
                     uid: excel.Excel.ThreeTrafficLights2Set
                   - name: ThreeTrianglesSet
                     uid: excel.Excel.ThreeTrianglesSet
-              - name: 应用程序
+              - name: Application
                 uid: excel.Excel.Application
               - name: AutoFilter
                 uid: excel.Excel.AutoFilter
@@ -1068,7 +1068,7 @@ items:
                     uid: excel_release.Excel.ThreeTrafficLights2Set
                   - name: ThreeTrianglesSet
                     uid: excel_release.Excel.ThreeTrianglesSet
-              - name: 应用程序
+              - name: Application
                 uid: excel_release.Excel.Application
               - name: BasicDataValidation
                 uid: excel_release.Excel.BasicDataValidation
@@ -1434,7 +1434,7 @@ items:
                 uid: onenote.OneNote.PageContentType
               - name: ParagraphType
                 uid: onenote.OneNote.ParagraphType
-          - name: 应用程序
+          - name: Application
             uid: onenote.OneNote.Application
           - name: FloatingInk
             uid: onenote.OneNote.FloatingInk
@@ -1524,6 +1524,8 @@ items:
                     uid: outlook.Office.MailboxEnums.AttachmentStatus
                   - name: AttachmentType
                     uid: outlook.Office.MailboxEnums.AttachmentType
+                  - name: CategoryColor
+                    uid: outlook.Office.MailboxEnums.CategoryColor
                   - name: 天
                     uid: outlook.Office.MailboxEnums.Days
                   - name: DelegatePermissions
@@ -1562,6 +1564,10 @@ items:
                 uid: outlook.Office.AttachmentDetails
               - name: 正文
                 uid: outlook.Office.Body
+              - name: 类别
+                uid: outlook.Office.Categories
+              - name: CategoryDetails
+                uid: outlook.Office.CategoryDetails
               - name: CoercionTypeOptions
                 uid: outlook.Office.CoercionTypeOptions
               - name: 联系人
@@ -2215,7 +2221,7 @@ items:
       - name: Visio
         uid: visio
         items:
-          - name: 应用程序
+          - name: Application
             uid: visio.Visio.Application
           - name: BoundingBox
             uid: visio.Visio.BoundingBox
@@ -2335,7 +2341,7 @@ items:
                 uid: word.Word.UnderlineType
               - name: VerticalAlignment
                 uid: word.Word.VerticalAlignment
-          - name: 应用程序
+          - name: Application
             uid: word.Word.Application
           - name: 正文
             uid: word.Word.Body
