--- a/docs/docs-ref-autogen/outlook/office.categorydetails.yml
+++ b/docs/docs-ref-autogen/outlook/office.categorydetails.yml
@@ -9,6 +9,17 @@ items:
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      var categories = [
+          {
+              "displayName": "Urgent!",
+              "color": Office.MailboxEnums.CategoryColor.Preset0
+          }
+      ];
+      ```
     isPreview: true
     name: Office.CategoryDetails
     fullName: Office.CategoryDetails
