--- a/docs/docs-ref-autogen/outlook/office.mastercategories.yml
+++ b/docs/docs-ref-autogen/outlook/office.mastercategories.yml
@@ -1,40 +1,42 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: outlook.Office.Categories
+  - uid: outlook.Office.MasterCategories
     summary: |-
-      代表项目上的类别。
+      代表邮箱上的类别主列表。
 
-      在 Outlook 中，用户可以使用类别对邮件和约会进行颜色编码。 用户在其邮箱上[的主列表中定义类别](xref:outlook.Office.MasterCategories)。 然后，他们可以将一个或多个类别应用于项目。
+      在 Outlook 中, 用户可以通过使用类别对邮件和约会进行着色, 从而对它们进行分组。 用户在其邮箱上的主列表中定义类别。 然后, 他们可以将一个或多个类别应用于项目。
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadMailbox
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
     isPreview: true
-    name: Office.Categories
-    fullName: Office.Categories
+    name: Office.MasterCategories
+    fullName: Office.MasterCategories
     langs:
       - typeScript
     type: interface
     package: outlook
     children:
-      - outlook.Office.Categories.addAsync
-      - outlook.Office.Categories.addAsync_1
-      - outlook.Office.Categories.getAsync
-      - outlook.Office.Categories.getAsync_1
-      - outlook.Office.Categories.removeAsync
-      - outlook.Office.Categories.removeAsync_1
-  - uid: outlook.Office.Categories.addAsync
-    summary: '将类别添加到项目中。 每个类别都必须位于该邮箱上的 "类别" 主列表中, 因此必须具有唯一的名称, 但多个类别可以使用相同的颜色。'
+      - outlook.Office.MasterCategories.addAsync
+      - outlook.Office.MasterCategories.addAsync_1
+      - outlook.Office.MasterCategories.getAsync
+      - outlook.Office.MasterCategories.getAsync_1
+      - outlook.Office.MasterCategories.removeAsync
+      - outlook.Office.MasterCategories.removeAsync_1
+  - uid: outlook.Office.MasterCategories.addAsync
+    summary: '将类别添加到邮箱的主列表中。 每个类别必须具有唯一的名称, 但多个类别可以使用相同的颜色。'
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteMailbox
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
 
       **错误**:
 
-      - InvalidCategory: 提供了无效的类别。
+      - DuplicateCategory: "主类别列表" 中已有一个提供的类别。
+
+      - PermissionDenied: 用户没有执行此操作的权限。
     isPreview: true
     name: 'addAsync(categories, options, callback)'
     fullName: 'addAsync(categories, options, callback)'
@@ -42,16 +44,16 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'addAsync(categories: string[], options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      content: 'addAsync(categories: CategoryDetails[], options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
       return:
         type:
           - void
         description: ''
       parameters:
         - id: categories
-          description: 要添加到项目中的类别。
+          description: 要添加到邮箱的主列表中的类别。
           type:
-            - 'string[]'
+            - 'CategoryDetails[]'
         - id: options
           description: '可选。 包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
           type:
@@ -63,33 +65,18 @@ items:
             \[Api 集: 邮箱预览\]
           type:
             - '(asyncResult: Office.AsyncResult<void>) => void'
-  - uid: outlook.Office.Categories.addAsync_1
-    summary: '将类别添加到项目中。 每个类别都必须位于该邮箱上的 "类别" 主列表中, 因此必须具有唯一的名称, 但多个类别可以使用相同的颜色。'
+  - uid: outlook.Office.MasterCategories.addAsync_1
+    summary: '将类别添加到邮箱的主列表中。 每个类别必须具有唯一的名称, 但多个类别可以使用相同的颜色。'
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteMailbox
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
 
       **错误**:
 
-      - InvalidCategory: 提供了无效的类别。
+      - DuplicateCategory: "主类别列表" 中已有一个提供的类别。
 
-      #### <a name="examples"></a>示例
-
-      ```javascript
-      // Note: In order for you to successfully add a category,
-      // it must be in the mailbox categories master list.
-
-      var categoriesToAdd = ["Urgent!"];
-
-      Office.context.mailbox.item.categories.addAsync(categoriesToAdd, function (asyncResult) {
-          if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
-              console.log("Successfully added categories");
-          } else {
-              console.log("categories.addAsync call failed with error: " + asyncResult.error.message);
-          }
-      });
-      ```
+      - PermissionDenied: 用户没有执行此操作的权限。
     isPreview: true
     name: 'addAsync(categories, callback)'
     fullName: 'addAsync(categories, callback)'
@@ -97,16 +84,16 @@ items:
       - typeScript
     type: method
     syntax:
-      content: 'addAsync(categories: string[], callback: (asyncResult: Office.AsyncResult<void>) => void): void;'
+      content: 'addAsync(categories: CategoryDetails[], callback: (asyncResult: Office.AsyncResult<void>) => void): void;'
       return:
         type:
           - void
         description: ''
       parameters:
         - id: categories
-          description: 要添加到项目中的类别。
+          description: 要添加到邮箱的主列表中的类别。
           type:
-            - 'string[]'
+            - 'CategoryDetails[]'
         - id: callback
           description: |-
             方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 如果添加类别失败, asyncResult. error 属性将包含一个错误代码。
@@ -114,10 +101,10 @@ items:
             \[Api 集: 邮箱预览\]
           type:
             - '(asyncResult: Office.AsyncResult<void>) => void'
-  - uid: outlook.Office.Categories.getAsync
-    summary: 获取项的类别。
+  - uid: outlook.Office.MasterCategories.getAsync
+    summary: 获取邮箱的主类别列表。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadMailbox
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
     isPreview: true
@@ -144,28 +131,12 @@ items:
             \[Api 集: 邮箱预览\]
           type:
             - '(asyncResult: Office.AsyncResult<CategoryDetails[]>) => void'
-  - uid: outlook.Office.Categories.getAsync_1
-    summary: 获取项的类别。
+  - uid: outlook.Office.MasterCategories.getAsync_1
+    summary: 获取邮箱的主类别列表。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadMailbox
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
-
-      #### <a name="examples"></a>示例
-
-      ```javascript
-      Office.context.mailbox.item.categories.getAsync(function (asyncResult) {
-          if (asyncResult.status === Office.AsyncResultStatus.Failed) {
-              console.log("Action failed with error: " + asyncResult.error.message);
-          } else {
-              var categories = asyncResult.value;
-              console.log("Categories:");
-              categories.forEach(function (item) {
-                  console.log("-- " + JSON.stringify(item));
-              });
-          }
-      });
-      ```
     isPreview: true
     name: getAsync(callback)
     fullName: getAsync(callback)
@@ -186,12 +157,16 @@ items:
             \[Api 集: 邮箱预览\]
           type:
             - '(asyncResult: Office.AsyncResult<CategoryDetails[]>) => void'
-  - uid: outlook.Office.Categories.removeAsync
-    summary: 从项目中删除类别。
+  - uid: outlook.Office.MasterCategories.removeAsync
+    summary: 从邮箱上的主列表中删除类别。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteMailbox
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+
+      **错误**:
+
+      - PermissionDenied: 用户没有执行此操作的权限。
     isPreview: true
     name: 'removeAsync(categories, options, callback)'
     fullName: 'removeAsync(categories, options, callback)'
@@ -206,7 +181,7 @@ items:
         description: ''
       parameters:
         - id: categories
-          description: 要从项目中删除的类别。
+          description: 要从邮箱上的主列表中删除的类别。
           type:
             - 'string[]'
         - id: options
@@ -220,26 +195,16 @@ items:
             \[Api 集: 邮箱预览\]
           type:
             - '(asyncResult: Office.AsyncResult<void>) => void'
-  - uid: outlook.Office.Categories.removeAsync_1
-    summary: 从项目中删除类别。
+  - uid: outlook.Office.MasterCategories.removeAsync_1
+    summary: 从邮箱上的主列表中删除类别。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteItem
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadWriteMailbox
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
 
-      #### <a name="examples"></a>示例
+      **错误**:
 
-      ```javascript
-      var categoriesToRemove = ["Urgent!"];
-
-      Office.context.mailbox.item.categories.removeAsync(categoriesToRemove, function (asyncResult) {
-          if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
-              console.log("Successfully removed categories");
-          } else {
-              console.log("categories.removeAsync call failed with error: " + asyncResult.error.message);
-          }
-      });
-      ```
+      - PermissionDenied: 用户没有执行此操作的权限。
     isPreview: true
     name: 'removeAsync(categories, callback)'
     fullName: 'removeAsync(categories, callback)'
@@ -254,7 +219,7 @@ items:
         description: ''
       parameters:
         - id: categories
-          description: 要从项目中删除的类别。
+          description: 要从邮箱上的主列表中删除的类别。
           type:
             - 'string[]'
         - id: callback
