--- a/docs/docs-ref-autogen/outlook/office.mastercategories.yml
+++ b/docs/docs-ref-autogen/outlook/office.mastercategories.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       代表邮箱上的类别主列表。
 
-      在 Outlook 中, 用户可以通过使用类别对邮件和约会进行着色, 从而对它们进行分组。 用户在其邮箱上的主列表中定义类别。 然后, 他们可以将一个或多个类别应用于项目。
+      在 Outlook 中，用户可以使用类别对邮件和约会进行颜色编码。 用户在其邮箱的主列表中定义类别。 然后，他们可以将一个或多个类别应用于项目。
 
       \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -77,6 +77,25 @@ items:
       - DuplicateCategory: "主类别列表" 中已有一个提供的类别。
 
       - PermissionDenied: 用户没有执行此操作的权限。
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      var masterCategoriesToAdd = [
+          {
+              "displayName": "Urgent!",
+              "color": Office.MailboxEnums.CategoryColor.Preset0
+          }
+      ];
+
+      Office.context.mailbox.masterCategories.addAsync(masterCategoriesToAdd, function (asyncResult) {
+          if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+              console.log("Successfully added categories to master list");
+          } else {
+              console.log("masterCategories.addAsync call failed with error: " + asyncResult.error.message);
+          }
+      });
+      ```
     isPreview: true
     name: 'addAsync(categories, callback)'
     fullName: 'addAsync(categories, callback)'
@@ -137,6 +156,22 @@ items:
       **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadMailbox
 
       **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      Office.context.mailbox.masterCategories.getAsync(function (asyncResult) {
+          if (asyncResult.status === Office.AsyncResultStatus.Failed) {
+              console.log("Action failed with error: " + asyncResult.error.message);
+          } else {
+              var masterCategories = asyncResult.value;
+              console.log("Master categories:");
+              masterCategories.forEach(function (item) {
+                  console.log("-- " + JSON.stringify(item));
+              });
+          }
+      });
+      ```
     isPreview: true
     name: getAsync(callback)
     fullName: getAsync(callback)
@@ -205,6 +240,20 @@ items:
       **错误**:
 
       - PermissionDenied: 用户没有执行此操作的权限。
+
+      #### <a name="examples"></a>示例
+
+      ```javascript
+      var masterCategoriesToRemove = ["Urgent!"];
+
+      Office.context.mailbox.masterCategories.removeAsync(masterCategoriesToRemove, function (asyncResult) {
+          if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+              console.log("Successfully removed categories from master list");
+          } else {
+              console.log("masterCategories.removeAsync call failed with error: " + asyncResult.error.message);
+          }
+      });
+      ```
     isPreview: true
     name: 'removeAsync(categories, callback)'
     fullName: 'removeAsync(categories, callback)'
